# clockify-mcp

./: .gitignore  LICENSE  README.md  build_dxt.py  build_mcpb.py  manifest.json  pyproject.toml  server.py
.claude-plugin/: plugin.json
.github/workflows/: release.yml
src/clockify_mcp/: __init__.py  cli.py  client.py  server.py
