[project]
name = "clockify-mcp"
version = "0.3.0"
description = "Tiny Clockify SDK + MCP server for reading and adding time entries."
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
clockify = "clockify_mcp.cli:main"
clockify-mcp = "clockify_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/clockify_mcp"]
